<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="271dp"
        android:layout_height="227dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="70dp"
        >

        <Button
            android:id="@+id/btn_exo1"
            android:backgroundTint="@color/teal_700"
            android:layout_width="282dp"
            android:layout_height="81dp"
            android:text="@string/exercice1" />

        <Button
            android:id="@+id/btn_exo2"
            android:backgroundTint="@color/teal_700"
            android:layout_width="282dp"
            android:layout_height="77dp"
            android:text="@string/exercice2" />

        <Button
            android:id="@+id/btn_exo3"
            android:layout_width="282dp"
            android:backgroundTint="@color/teal_700"
            android:layout_height="78dp"
            android:text="@string/exercice3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>